--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <!-- <div class="text-header">Good Morning Sunshine</div> -->
+        <div class="text-header">Good Morning</div>
         <div class="textHappy">What are your tasks for today?</div>
         <div id="newtask">
             <input type="text" placeholder="Enter your Task">
